--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.login.MainActivity">
+    tools:context=".ui.login.LoginActivity">
 
     <ImageView
         android:id="@+id/img_view"
@@ -20,13 +20,13 @@
         app:srcCompat="@drawable/image_welcome" />
 
     <TextView
-        android:id="@+id/tv_signup"
+        android:id="@+id/tv_login"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:text="@string/signup"
+        android:text="@string/login"
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -36,34 +36,14 @@
         app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />
 
     <TextView
-        android:id="@+id/tv_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/name"
-        app:layout_constraintEnd_toEndOf="@+id/tv_signup"
-        app:layout_constraintStart_toStartOf="@+id/tv_signup"
-        app:layout_constraintTop_toBottomOf="@+id/tv_signup" />
-
-    <com.tezaalfian.storyapp.customview.MyEditText
-        android:id="@+id/edt_name"
-        android:hint="@string/name_hint"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="@+id/tv_signup"
-        app:layout_constraintStart_toStartOf="@+id/tv_signup"
-        app:layout_constraintTop_toBottomOf="@+id/tv_name"/>
-
-    <TextView
         android:id="@+id/tv_email"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@string/email"
-        app:layout_constraintEnd_toEndOf="@+id/tv_signup"
-        app:layout_constraintStart_toStartOf="@+id/tv_signup"
-        app:layout_constraintTop_toBottomOf="@+id/edt_name" />
+        app:layout_constraintEnd_toEndOf="@+id/tv_login"
+        app:layout_constraintStart_toStartOf="@+id/tv_login"
+        app:layout_constraintTop_toBottomOf="@+id/tv_login" />
 
     <com.tezaalfian.storyapp.customview.EmailEditText
         android:id="@+id/edt_email"
@@ -71,8 +51,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="@+id/tv_signup"
-        app:layout_constraintStart_toStartOf="@+id/tv_signup"
+        app:layout_constraintEnd_toEndOf="@+id/tv_login"
+        app:layout_constraintStart_toStartOf="@+id/tv_login"
         app:layout_constraintTop_toBottomOf="@+id/tv_email" />
 
     <TextView
@@ -81,8 +61,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@string/password"
-        app:layout_constraintEnd_toEndOf="@+id/tv_signup"
-        app:layout_constraintStart_toStartOf="@+id/tv_signup"
+        app:layout_constraintEnd_toEndOf="@+id/tv_login"
+        app:layout_constraintStart_toStartOf="@+id/tv_login"
         app:layout_constraintTop_toBottomOf="@+id/edt_email" />
 
     <com.tezaalfian.storyapp.customview.PasswordEditText
@@ -92,20 +72,20 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="@+id/tv_signup"
-        app:layout_constraintStart_toStartOf="@+id/tv_signup"
+        app:layout_constraintEnd_toEndOf="@+id/tv_login"
+        app:layout_constraintStart_toStartOf="@+id/tv_login"
         app:layout_constraintTop_toBottomOf="@+id/tv_password" />
 
     <Button
-        android:id="@+id/btn_signup"
+        android:id="@+id/btn_login"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/navi"
-        android:text="@string/signup"
+        android:text="@string/login"
         android:layout_marginTop="12dp"
-        app:layout_constraintEnd_toEndOf="@+id/tv_signup"
+        app:layout_constraintEnd_toEndOf="@+id/tv_login"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/tv_signup"
+        app:layout_constraintStart_toStartOf="@+id/tv_login"
         app:layout_constraintTop_toBottomOf="@+id/edt_password" />
 
     <TextView
@@ -113,17 +93,17 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="@string/signup_ket"
-        app:layout_constraintStart_toStartOf="@+id/tv_signup"
-        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />
+        android:text="@string/login_ket"
+        app:layout_constraintStart_toStartOf="@+id/tv_login"
+        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
     <TextView
-        android:id="@+id/tv_login"
+        android:id="@+id/tv_new_signup"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/login"
+        android:text="@string/signup"
         android:textColor="@color/navi"
-        app:layout_constraintEnd_toEndOf="@+id/tv_signup"
+        app:layout_constraintEnd_toEndOf="@+id/tv_login"
         app:layout_constraintStart_toEndOf="@+id/tv_ket"
         app:layout_constraintTop_toTopOf="@+id/tv_ket" />
 
@@ -145,7 +125,7 @@
         android:layout_height="64dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintGuide_percent="0.30"
+        app:layout_constraintGuide_percent="0.3"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
