--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,6 +21,7 @@
 
     <TextView
         android:id="@+id/tv_login"
+        android:alpha="0"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -37,6 +38,7 @@
 
     <TextView
         android:id="@+id/tv_email"
+        android:alpha="0"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -47,6 +49,7 @@
 
     <com.tezaalfian.storyapp.customview.EmailEditText
         android:id="@+id/edt_email"
+        android:alpha="0"
         android:hint="@string/email_hint"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -57,6 +60,7 @@
 
     <TextView
         android:id="@+id/tv_password"
+        android:alpha="0"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -67,6 +71,7 @@
 
     <com.tezaalfian.storyapp.customview.PasswordEditText
         android:id="@+id/edt_password"
+        android:alpha="0"
         android:inputType="textPassword"
         android:hint="@string/pass_hint"
         android:layout_width="0dp"
@@ -78,6 +83,7 @@
 
     <Button
         android:id="@+id/btn_login"
+        android:alpha="0"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/navi"
@@ -90,6 +96,7 @@
 
     <TextView
         android:id="@+id/tv_ket"
+        android:alpha="0"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -99,6 +106,7 @@
 
     <TextView
         android:id="@+id/tv_new_signup"
+        android:alpha="0"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/signup"
