--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -21,6 +21,7 @@
 
     <TextView
         android:id="@+id/tv_signup"
+        android:alpha="0"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -37,6 +38,7 @@
 
     <TextView
         android:id="@+id/tv_name"
+        android:alpha="0"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -47,6 +49,7 @@
 
     <com.tezaalfian.storyapp.customview.MyEditText
         android:id="@+id/edt_name"
+        android:alpha="0"
         android:hint="@string/name_hint"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -57,6 +60,7 @@
 
     <TextView
         android:id="@+id/tv_email"
+        android:alpha="0"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -67,6 +71,7 @@
 
     <com.tezaalfian.storyapp.customview.EmailEditText
         android:id="@+id/edt_email"
+        android:alpha="0"
         android:hint="@string/email_hint"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -77,6 +82,7 @@
 
     <TextView
         android:id="@+id/tv_password"
+        android:alpha="0"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -87,6 +93,7 @@
 
     <com.tezaalfian.storyapp.customview.PasswordEditText
         android:id="@+id/edt_password"
+        android:alpha="0"
         android:inputType="textPassword"
         android:hint="@string/pass_hint"
         android:layout_width="0dp"
@@ -98,6 +105,7 @@
 
     <Button
         android:id="@+id/btn_signup"
+        android:alpha="0"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/navi"
@@ -110,6 +118,7 @@
 
     <TextView
         android:id="@+id/tv_ket"
+        android:alpha="0"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -119,6 +128,7 @@
 
     <TextView
         android:id="@+id/tv_login"
+        android:alpha="0"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/login"
