--- a/app/src/main/res/menu/item_menu.xml
+++ b/app/src/main/res/menu/item_menu.xml
@@ -12,4 +12,9 @@
         android:icon="@drawable/ic_baseline_power_settings_new_24"
         android:title="@string/logout"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/setting"
+        android:icon="@drawable/ic_baseline_settings_24"
+        android:title="@string/setting"
+        app:showAsAction="always" />
 </menu>
