--- a/app/src/main/res/menu/item_menu.xml
+++ b/app/src/main/res/menu/item_menu.xml
@@ -8,13 +8,14 @@
         android:title="@string/add_story"
         app:showAsAction="always" />
     <item
-        android:id="@+id/logout"
-        android:icon="@drawable/ic_baseline_power_settings_new_24"
-        android:title="@string/logout"
-        app:showAsAction="always" />
+        android:id="@+id/map_menu"
+        android:icon="@drawable/ic_baseline_location_on_24"
+        android:title="@string/maps"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/setting"
-        android:icon="@drawable/ic_baseline_settings_24"
-        android:title="@string/setting"
-        app:showAsAction="always" />
+        android:title="@string/setting" />
+    <item
+        android:id="@+id/logout"
+        android:title="@string/logout" />
 </menu>
